# baichuan_api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml
baichuan_api/: api.py  app.py  models.py
